Update connection string for PostgreSQL, add Swagger support, and implement initial database migration for Propriedades and Talhoes tables in ManagementService.Api.

--- a/src/ManagementService.Api/appsettings.json
+++ b/src/ManagementService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ManagementService;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ManagementService;Username=docker;Password=docker"
   },
   "Logging": {
     "LogLevel": {
