Add JWT authentication support and refactor Propriedades and Talhoes controllers to include producer ID validation. Update application settings and project dependencies for JWT. Enhance Propriedade and Talhao services to handle producer-specific data access.

--- a/src/PropertyService.Api/appsettings.Development.json
+++ b/src/PropertyService.Api/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=PropertyService;Username=docker;Password=docker"
   },
+  "Jwt": {
+    "Issuer": "UserService",
+    "Audience": "PropertyService",
+    "SecretKey": "CHANGE_THIS_TO_YOUR_SECRET_KEY_FROM_USER_SERVICE"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
