Remove PropertyService.Tests project and associated test files, including PropriedadesControllerTests, TalhoesControllerTests, PropriedadeServiceTests, TalhaoServiceTests, and UserContextServiceTests. Update solution file to reflect changes in project structure.

--- a/tests/PropertyService.Tests.csproj
+++ b/tests/PropertyService.Tests.csproj
@@ -21,9 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PropertyService.Application\PropertyService.Application.csproj" />
-    <ProjectReference Include="..\..\src\PropertyService.Api\PropertyService.Api.csproj" />
-    <ProjectReference Include="..\..\src\PropertyService.Domain\PropertyService.Domain.csproj" />
+    <ProjectReference Include="..\src\PropertyService.Application\PropertyService.Application.csproj" />
+    <ProjectReference Include="..\src\PropertyService.Api\PropertyService.Api.csproj" />
+    <ProjectReference Include="..\src\PropertyService.Domain\PropertyService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
