Enhance JWT authentication by adding a development bypass scheme for easier testing. Update appsettings for development configuration and modify solution file to correct project paths.

--- a/src/PropertyService.Api/appsettings.Development.json
+++ b/src/PropertyService.Api/appsettings.Development.json
@@ -7,6 +7,9 @@
     "Audience": "PropertyService",
     "SecretKey": "CHANGE_THIS_TO_YOUR_SECRET_KEY_FROM_USER_SERVICE"
   },
+  "Development": {
+    "DisableJwtValidation": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
