Refactor JWT configuration by updating key properties in appsettings and JwtSettings. Introduce ValidAudiences for enhanced audience validation and replace SecretKey with Key for consistency. Adjust JwtConfiguration to accommodate new settings and improve error handling.

--- a/src/PropertyService.Api/appsettings.Development.json
+++ b/src/PropertyService.Api/appsettings.Development.json
@@ -3,9 +3,10 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=PropertyService;Username=docker;Password=docker"
   },
   "Jwt": {
-    "Issuer": "UserService",
-    "Audience": "PropertyService",
-    "SecretKey": "CHANGE_THIS_TO_YOUR_SECRET_KEY_FROM_USER_SERVICE"
+    "Issuer": "IdentityService",
+    "Audience": "api",
+    "Key": "7G+H65bLToXxqzPvj7+q0oQUlxJp1WvdOU3nv3ArA1s=",
+    "ValidAudiences": [ "api", "PropertyService" ]
   },
   "Development": {
     "DisableJwtValidation": true
