Refactor JWT configuration by removing Audience and ValidAudiences properties from appsettings and JwtSettings. Update JwtConfiguration to streamline authentication setup and improve error handling. Add new endpoint in TalhoesController to retrieve talhoes by propriedadeId.

--- a/src/PropertyService.Api/appsettings.json
+++ b/src/PropertyService.Api/appsettings.json
@@ -4,9 +4,7 @@
   },
   "Jwt": {
     "Issuer": "IdentityService",
-    "Audience": "api",
-    "Key": "7G+H65bLToXxqzPvj7+q0oQUlxJp1WvdOU3nv3ArA1s=",
-    "ValidAudiences": [ "api", "PropertyService" ]
+    "Key": "7G+H65bLToXxqzPvj7+q0oQUlxJp1WvdOU3nv3ArA1s="
   },
   "Logging": {
     "LogLevel": {
