Add RabbitMQ configuration and integrate MassTransit for messaging support
Update appsettings files to include RabbitMQ connection details. Integrate MassTransit into the application for message publishing in PropriedadeService and TalhaoService, enhancing the application's messaging capabilities. Update project dependencies to include MassTransit and MassTransit.RabbitMQ packages.

--- a/src/PropertyService.Api/appsettings.json
+++ b/src/PropertyService.Api/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=PropertyService;Username=docker;Password=docker"
   },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "admin",
+    "Password": "admin123",
+    "VirtualHost": "/"
+  },
   "Jwt": {
     "Issuer": "IdentityService",
     "Key": "7G+H65bLToXxqzPvj7+q0oQUlxJp1WvdOU3nv3ArA1s="
