--- a/src/PropertyService.Api/appsettings.Development.json
+++ b/src/PropertyService.Api/appsettings.Development.json
@@ -6,6 +6,13 @@
     "Issuer": "IdentityService",
     "Key": "7G+H65bLToXxqzPvj7+q0oQUlxJp1WvdOU3nv3ArA1s="
   },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "admin",
+    "Password": "admin123",
+    "VirtualHost": "/"
+  },
   "Development": {
     "DisableJwtValidation": true
   },
