--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,10 +7,9 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
-    name: build
+  build-and-test:
+    name: Build and Test
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,17 +17,14 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: "9.0.x"
           cache: true
 
-      - name: Restore dependencies
-        run: dotnet restore
+      - name: Restore
+        run: dotnet restore PropertyService.sln
 
       - name: Build
-        run: dotnet build --no-restore --configuration Release
+        run: dotnet build PropertyService.sln --no-restore --configuration Release
 
-  tests:
-    needs: build
-    uses: ./.github/workflows/run-tests.yml
-    with:
-      dotnet-env: '9.0.x'
+      - name: Run Tests
+        run: dotnet test tests/PropertyService.Tests.csproj --configuration Release --no-build --verbosity minimal
