Update Development settings to enable JWT validation

--- a/src/PropertyService.Api/appsettings.Development.json
+++ b/src/PropertyService.Api/appsettings.Development.json
@@ -14,7 +14,7 @@
     "VirtualHost": "/"
   },
   "Development": {
-    "DisableJwtValidation": true
+    "DisableJwtValidation": false
   },
   "Logging": {
     "LogLevel": {
