--- a/src/PropertyService.Application/PropertyService.Application.csproj
+++ b/src/PropertyService.Application/PropertyService.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
