Add nodeSelector and tolerations to PostgreSQL deployment; implement nodeAffinity in persistent volume configuration for control-plane nodes

--- a/k8s/base/postgresql/pv.yaml
+++ b/k8s/base/postgresql/pv.yaml
@@ -11,3 +11,9 @@ spec:
   hostPath:
     path: "/data/postgres"
     type: DirectoryOrCreate
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: node-role.kubernetes.io/control-plane
+              operator: Exists
