--- a/k8s/base/postgresql/deployment.yaml
+++ b/k8s/base/postgresql/deployment.yaml
@@ -13,6 +13,12 @@ spec:
       labels:
         app: postgres
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/control-plane: ""
+      tolerations:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
+          effect: NoSchedule
       containers:
         - name: postgres
           image: postgres:16-alpine
