--- a/k8s/kind/config.yaml
+++ b/k8s/kind/config.yaml
@@ -1,13 +1,26 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-name: dev-propertyservice
+name: agro-dev
 
 nodes:
   - role: control-plane
     extraPortMappings:
       - containerPort: 30080
         hostPort: 30080
+      - containerPort: 30081
+        hostPort: 30081
       - containerPort: 30032
         hostPort: 30032
-
+      - containerPort: 30033
+        hostPort: 30033
+      - containerPort: 5000
+        hostPort: 5000
+      - containerPort: 3000
+        hostPort: 3000
+      - containerPort: 9090
+        hostPort: 9090
+      - containerPort: 5672
+        hostPort: 5672
+      - containerPort: 15672
+        hostPort: 15672
   - role: worker
