Add resource requests and limits to deployment configurations for PostgreSQL, Prometheus, Grafana, and wait-for-postgres init container to optimize resource management and performance.

--- a/k8s/base/observability/prometheus/deployment.yaml
+++ b/k8s/base/observability/prometheus/deployment.yaml
@@ -59,6 +59,13 @@ spec:
               mountPath: /etc/prometheus
             - name: prometheus-data
               mountPath: /prometheus
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
       volumes:
         - name: prometheus-config
           configMap:
