--- a/k8s/base/app/deployment.yaml
+++ b/k8s/base/app/deployment.yaml
@@ -19,6 +19,13 @@ spec:
       initContainers:
         - name: wait-for-postgres
           image: postgres:16-alpine
+          resources:
+            requests:
+              cpu: "10m"
+              memory: "32Mi"
+            limits:
+              cpu: "50m"
+              memory: "64Mi"
           command:
             - sh
             - -c
