--- a/k8s/base/observability/grafana/deployment.yaml
+++ b/k8s/base/observability/grafana/deployment.yaml
@@ -32,6 +32,13 @@ spec:
               mountPath: /var/lib/grafana
             - name: grafana-datasources
               mountPath: /etc/grafana/provisioning/datasources
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
       volumes:
         - name: grafana-storage
           emptyDir: {}
