--- a/k8s/base/postgresql/deployment.yaml
+++ b/k8s/base/postgresql/deployment.yaml
@@ -44,6 +44,13 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgresdb
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
       volumes:
         - name: postgresdb
           persistentVolumeClaim:
