Update Kubernetes service and configuration files to change NodePort from 30080 to 30082, and add new container port mapping for 30082 in Kind configuration. Remove obsolete deploy-master.sh script to streamline deployment process.

--- a/k8s/kind/config.yaml
+++ b/k8s/kind/config.yaml
@@ -9,6 +9,8 @@ nodes:
         hostPort: 30080
       - containerPort: 30081
         hostPort: 30081
+      - containerPort: 30082
+        hostPort: 30082
       - containerPort: 30032
         hostPort: 30032
       - containerPort: 30033
