Update PostgreSQL PersistentVolume configuration and Kind setup by renaming the PersistentVolume and host path for clarity, and adding new container port mappings to enhance service accessibility.

--- a/k8s/kind/config.yaml
+++ b/k8s/kind/config.yaml
@@ -33,6 +33,10 @@ nodes:
         hostPort: 5672
       - containerPort: 31567
         hostPort: 15672
+      - containerPort: 30673
+        hostPort: 30673
+      - containerPort: 31673
+        hostPort: 31673
       - containerPort: 30900
         hostPort: 30900
       - containerPort: 30902
