--- a/k8s/base/postgresql/pv.yaml
+++ b/k8s/base/postgresql/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-pv
+  name: postgres-pv-property
 spec:
   storageClassName: manual
   capacity:
@@ -9,7 +9,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/data/postgres"
+    path: "/data/postgres-property"
     type: DirectoryOrCreate
   nodeAffinity:
     required:
