--- a/k8s/base/observability/grafana/deployment.yaml
+++ b/k8s/base/observability/grafana/deployment.yaml
@@ -32,6 +32,10 @@ spec:
               mountPath: /var/lib/grafana
             - name: grafana-datasources
               mountPath: /etc/grafana/provisioning/datasources
+            - name: grafana-dashboards-config
+              mountPath: /etc/grafana/provisioning/dashboards
+            - name: grafana-dashboard-propertyservice
+              mountPath: /var/lib/grafana/dashboards
           resources:
             requests:
               cpu: "100m"
@@ -45,6 +49,12 @@ spec:
         - name: grafana-datasources
           configMap:
             name: grafana-datasources
+        - name: grafana-dashboards-config
+          configMap:
+            name: grafana-dashboards-config
+        - name: grafana-dashboard-propertyservice
+          configMap:
+            name: grafana-dashboard-propertyservice
 ---
 apiVersion: v1
 kind: Service
